# yp-ffi

./: Cargo.toml  README.md
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
grayscale_plugin/: Cargo.toml
grayscale_plugin/src/: lib.rs
image_processor/: Cargo.toml
image_processor/src/: error.rs  lib.rs  main.rs  plugin_loader.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
params/: blur.json  mirror.json
plugin_interface/: Cargo.toml
plugin_interface/src/: error.rs  lib.rs  params.rs
