[workspace]
resolver = '3'
members = [
    "blur_plugin",
    "grayscale_plugin",
    "image_processor",
    "mirror_plugin",
    "plugin_interface",
]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
miette = { version = "7", features = ["fancy"] }
indicatif = "0.17"
anstyle = "1"
