[package]
name = "plugin_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
libloading = "0.9.0"
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.6", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
miette.workspace = true
